test/expr/bad-load-type.txt
;;; ERROR: 1
(module (func (load.x32 (i32.const 0))))
(;; STDERR ;;;
expr/bad-load-type.txt:2:16: unexpected token "load.x32"
expr/bad-load-type.txt:2:25: syntax error, unexpected (
;;; STDERR ;;)
